--- v1.2 (2017-xx-xx) ---
*** common ***
* Update Qt SDK version from 5.7.0 to 5.7.1.

--- v1.1 (2016-11-19) ---
*** common ***
* Add 'linux', 'windows', 'android' and 'qt-sdk' targets into Makefile for
  downloading of LXE, MXE, Android SDK+NDK and Qt SDK accordingly. Default
  target ('download') use them all sequentially.
* Update Android NDK version from r12 to r12b.
*** build-project ***
* Update InstallQmakeProject():
  - delete more extra files which are generated by Qt >= 5.7
  - delete static libraries only if there are other files besides them
* Update cmake usage in PrepareBuild() after changes in MXE and LXE.
* Change target names scheme for Android builds:
  android-<Android API level>_<target architecture>
  ANDROID_PLATFORM variable from config files will be ignored, because it is
  specified in SYSTEM variable now.
* Change Android application package names scheme:
  <Project name>_android-<Android API level>_<target architecture>.apk
* Add 'install-to-sysroot' (useful for using of extra libraries in android
  program) and 'install-to-qt-sdk' (useful for modules, plugins and libraries
  like qtserialport, qsqlmysql, qca, etc.) command-line options.
* Add timestamps into build.log files.
*** build-supervisor ***
* Fix title in html files generated by cppcheck-htmlreport.
* Add timestamps into cppcheck.log files.

--- v1.0 (2016-06-22) ---
*** common ***
* Update sample of sibuserv config.
* Only x86_64 systems are supported now. (Google and Digia have decided to
  discontinue support of Android SDK, NDK and Qt SDK for 32-bit Linux based
  systems.)
* Add a separate qt-opensource-linux-x64-android-$(QT_VERSION).run file to
  download target.
* Update Android NDK version from r10e to r12.
*** build-supervisor ***
* Use cppcheck for static code analysis only when it is available.
* Move cppcheck logs into StaticCodeAnalysis subdirectory.
* Add options:
  - STATIC_CODE_ANALYSIS_LOGS_SUBDIR
  - ENABLE_STATIC_CODE_ANALYSIS
  - ENABLE_CPPCHECK_LOG