@@ -14,7 +14,7 @@ export QT_SERIES="5.7"
 export QT_SDK_DIR="/opt/Qt/qt-current/${QT_SERIES}"
 
 export ANDROID_SDK_ROOT="/opt/android_sdk/android-sdk-linux"
-export ANDROID_NDK_ROOT="/opt/android_ndk/android-ndk-r12b"
+export ANDROID_NDK_ROOT="/opt/android_ndk/android-ndk-r13b"
 export ANDROID_NDK_TOOLCHAIN_VERSION="4.9"
 
 export JDK="/usr/lib/jvm/java-8-openjdk-amd64"
